examples/test/testpolicy16426.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16426
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key23: value8
      key31: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value27
          key35: value20
      podSelector:
        matchLabels:
          key33: value9
          key40: value2
          key3: value0
